Rename command argument types