@@ -15,24 +15,22 @@ import net.minecraft.commands.SharedSuggestionProvider;
 import net.minecraft.commands.synchronization.ArgumentSerializer;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.util.StringRepresentable;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class TemperatureTypeArgument implements ArgumentType<Temperature.Trait>
+public class TempAttributeTraitArgument implements ArgumentType<Temperature.Trait>
 {
     private static final Dynamic2CommandExceptionType INVALID_ENUM = new Dynamic2CommandExceptionType(
             (found, constants) -> new TranslatableComponent("commands.forge.arguments.enum.invalid", constants, found));
 
-    public static TemperatureTypeArgument type()
-    {   return new TemperatureTypeArgument();
+    public static TempAttributeTraitArgument attribute()
+    {   return new TempAttributeTraitArgument();
     }
 
-    public static Temperature.Trait getTemperature(CommandContext<CommandSourceStack> context, String argument)
+    public static Temperature.Trait getAttribute(CommandContext<CommandSourceStack> context, String argument)
     {   return context.getArgument(argument, Temperature.Trait.class);
     }
 
@@ -51,30 +49,30 @@ public class TemperatureTypeArgument implements ArgumentType<Temperature.Trait>
     @Override
     public <S> CompletableFuture<Suggestions> listSuggestions(final CommandContext<S> context, final SuggestionsBuilder builder)
     {
-        return SharedSuggestionProvider.suggest(Stream.of(EntityTempManager.VALID_TEMPERATURE_TRAITS).map(StringRepresentable::getSerializedName), builder);
+        return SharedSuggestionProvider.suggest(this.getExamples(), builder);
     }
 
     @Override
     public Collection<String> getExamples()
     {
-        return Stream.of(EntityTempManager.VALID_TEMPERATURE_TRAITS).map(StringRepresentable::getSerializedName).collect(Collectors.toList());
+        return Stream.of(EntityTempManager.VALID_ATTRIBUTE_TYPES).map(Temperature.Trait::getSerializedName).toList();
     }
 
-    public static class Serializer implements ArgumentSerializer<TemperatureTypeArgument>
+    public static class Serializer implements ArgumentSerializer<TempAttributeTraitArgument>
     {
         @Override
-        public void serializeToNetwork(TemperatureTypeArgument argument, FriendlyByteBuf buffer)
+        public void serializeToNetwork(TempAttributeTraitArgument argument, FriendlyByteBuf buffer)
         {
         }
 
         @SuppressWarnings({"unchecked"})
         @Override
-        public TemperatureTypeArgument deserializeFromNetwork(FriendlyByteBuf buffer)
-        {   return new TemperatureTypeArgument();
+        public TempAttributeTraitArgument deserializeFromNetwork(FriendlyByteBuf buffer)
+        {   return new TempAttributeTraitArgument();
         }
 
         @Override
-        public void serializeToJson(TemperatureTypeArgument argument, JsonObject json)
+        public void serializeToJson(TempAttributeTraitArgument argument, JsonObject json)
         {
         }
     }
